--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.14",
@@ -21,7 +22,7 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.23.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0"
